[package]
name = "pagerank_rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for computing PageRank, optimized for performance and flexibility."
license = "MIT"
repository = "https://github.com/dcadenas/pagerank_rs"
homepage = "https://github.com/dcadenas/pagerank_rs"
readme = "README.md"
keywords = ["pagerank", "graph", "network-analysis"]
categories = ["algorithms", "computing", "science"]
documentation = "https://github.com/dcadenas/pagerank_rs#readme"

exclude = [
    ".github/workflows/rust.yml",
    ".gitignore",
    "Cargo.lock",
    "Cargo.toml.orig",
    "grcov.yml"
]

[dependencies]
pyroscope = "0.5.7"
pyroscope_pprofrs = "0.2.7"
rayon = "1.8.0"

[dev-dependencies]
float-cmp = "0.9.0"
rand = "0.8.5"
graph = "0.3.1"
simple-pagerank = "0.2.0"
criterion = "0.5.1"

[[bench]]
name = "pagerank_benchmark"
harness = false
